# skin_color_detection

./: CMakeLists.txt  README.md
src/: videoMaker_main.cpp
